🐞 Fix text alignment on small screens
Because:
---
* fix the alignment of the description field for the small screen
  devices

--- a/src/TimelineUnitList/TimeUnitList.module.scss
+++ b/src/TimelineUnitList/TimeUnitList.module.scss
@@ -2,6 +2,7 @@
 
 .time_units {
     list-style: none;
+    padding: 0;
     .time_unit {
         position: relative;
         min-height: 15rem;
